--- a/build.gradle
+++ b/build.gradle
@@ -95,3 +95,29 @@ publishing {
         // retrieving dependencies.
     }
 }
+
+loom {
+    runs {
+        // This adds a new gradle task that runs the datagen API: "gradlew runDatagenClient"
+        datagenClient {
+            inherit client
+            name "Data Generation"
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+            vmArg "-Dfabric-api.datagen.strict-validation"
+
+            runDir "build/datagen"
+        }
+    }
+}
+
+// Add the datagenned files into the jar.
+sourceSets {
+    main {
+        resources {
+            srcDirs += [
+                    'src/main/generated'
+            ]
+        }
+    }
+}
