--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     // modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
 
     modImplementation 'org.json:json:20220924'
+    modImplementation 'com.fasterxml.uuid:java-uuid-generator:4.0.1'
+    modImplementation 'commons-io:commons-io:2.11.0'
+    modImplementation 'com.h2database:h2:2.1.214'
 }
 
 processResources {
