--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,3 +1,9 @@
+# Database of properties
+#
+# Options:
+#      - leveldb
+#      Use leveldb to store and cache properties data
+#
 # Default value:
 #    database.type=leveldb
 database.type=leveldb
