--- a/gradle.properties
+++ b/gradle.properties
@@ -4,13 +4,13 @@ org.gradle.jvmargs = -Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version = 1.19.4
-	yarn_mappings = 1.19.4+build.1
-	loader_version = 0.14.17
+	yarn_mappings=1.19.4+build.1
+loader_version=0.14.18
 
 # Mod Properties
-	mod_version=23w01a
+mod_version=23w01a
 maven_group=com.example
-	archives_base_name = the-road-to-reality
+archives_base_name=the-road-to-reality
 
 # Dependencies
-	fabric_version = 0.75.3+1.19.4
+fabric_version=0.76.0+1.19.4
