--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ configurations {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:23.0.0'
+
     // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
