--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,9 +1,13 @@
 # Database of properties
 #
 # Options:
-#      - leveldb
-#      Use leveldb to store and cache properties data
+#      - leveldb (deprecated)
+#      Use leveldb to store and cache data
+#      - berkeley
+#      Use berkeley db to store and cache data.
 #
 # Default value:
-#    database.type=leveldb
-database.type=leveldb
+#    database.type=berkeley
+database.type=berkeley
+
+gas.disappearance=true
