--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '1.4-SNAPSHOT'
     id 'maven-publish'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.21'
 }
 
 archivesBaseName = project.archives_base_name + "-" + project.minecraft_version
@@ -8,6 +9,7 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
+    mavenCentral()
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -37,11 +39,12 @@ dependencies {
     // modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
     shadow "de.javagl:obj:0.3.0"
 
-//    shadow 'io.github.pcmind:leveldb:1.2'
-    shadow 'com.sleepycat:je:18.3.12'
+    shadow 'io.github.pcmind:leveldb:1.2'
+    shadow 'com.google.guava:guava:32.1.3-jre'
 
     shadow 'bot.inker.acj:runtime:1.3'
     shadow 'org.reflections:reflections:0.10.2'
+    shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 processResources {
@@ -120,5 +123,15 @@ sourceSets {
                     'src/main/generated'
             ]
         }
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
