--- a/src/main/resources/default-config.conf
+++ b/src/main/resources/default-config.conf
@@ -1,13 +1,11 @@
 # Database of properties
 #
 # Options:
-#      - leveldb (deprecated)
+#      - leveldb
 #      Use leveldb to store and cache data
-#      - berkeley
-#      Use berkeley db to store and cache data.
 #
 # Default value:
-#    database.type=berkeley
-database.type=berkeley
+#    database.type=leveldb
+database.type=leveldb
 
-gas.disappearance=true
+gas.disappearance=false
